# portal-patch-old

./: .hgignore  build-project
contrib/addons/DIF/: DIF.lua  DIF.toc  DIF.xml
contrib/addons/GMTools/: GMTools.lua  GMTools.toc  GMTools.xml  Readme.txt
contrib/addons/NetPerf/: NetPerf.lua  NetPerf.toc  NetPerf.xml
contrib/addons/PrivateServerFix/: PrivateServerFix.toc
contrib/addons/QuickCoords/: MapCoordsFrame.xml  PartyCoordsFrame.xml  PlayerCoordsFrame.xml  QuickCoords.lua  QuickCoords.toc  QuickCoords.xml  Settings.xml  Templates.xml
patched-base/: CMakeLists.txt  versions.txt
patched-base/contrib/extractor/: VC110_AD.sln  VC110_ad.vcxproj
patched-base/contrib/git_id/: git_id_vc110.sln  git_id_vc110.vcxproj
patched-base/maptools/: CMakeLists.txt
patched-base/maptools/map_extractor/: CMakeLists.txt  System.cpp  mpq_libmpq.h
patched-base/maptools/map_extractor/libmpq03/: CMakeLists.txt
patched-base/maptools/map_extractor/map_loadlib/: CMakeLists.txt  loadlib.h
patched-base/maptools/mmap_generator/: CMakeLists.txt  CoreMap.h  IntermediateValues.cpp  IntermediateValues.h  MMapCommon.h  MapBuilder.cpp  MapBuilder.h  README.txt  TerrainBuilder.cpp  TerrainBuilder.h  VMapExtensions.cpp  generator.cpp  mmap_build.sh
patched-base/maptools/vmap_assembler/: CMakeLists.txt  README.txt  vmap_assembler.cpp
patched-base/maptools/vmap_extractor/: CMakeLists.txt  adtfile.cpp  adtfile.h  dbcfile.cpp  dbcfile.h  model.cpp  model.h  mpq_libmpq04.h  vmapexport.cpp  vmapexport.h  wdtfile.cpp  wdtfile.h  wmo.cpp  wmo.h
patched-base/maptools/vmap_extractor/libmpq04/: CMakeLists.txt  config.h  zconf.h  zlib.h
patched-base/src/game/: AchievementMgr.cpp  Chat.cpp  Chat.h  ChatHandler.cpp  Creature.cpp  Creature.h  GameObject.cpp  Level3.cpp  Map.cpp  MiscHandler.cpp  ObjectMgr.cpp  ObjectMgr.h  Player.cpp  Player.h  SQLStorages.cpp  World.h  (+2 more)
patched-base/win/: mangosdVC110.sln  mangosdVC120.sln
patched-db/characters/: account_data.sql  arena_team.sql  arena_team_member.sql  arena_team_stats.sql  auction.sql  bugreport.sql  calendar_events.sql  calendar_invites.sql  character_account_data.sql  character_achievement.sql  character_achievement_progress.sql  character_action.sql  character_aura.sql  character_battleground_data.sql  character_db_version.sql  character_declinedname.sql  character_equipmentsets.sql  character_gifts.sql  character_glyphs.sql  character_homebind.sql  character_instance.sql  character_inventory.sql  character_pet.sql  character_pet_declinedname.sql  character_queststatus.sql  character_queststatus_daily.sql  character_queststatus_monthly.sql  character_queststatus_weekly.sql  character_reputation.sql  character_skills.sql  character_social.sql  character_spell.sql  character_spell_cooldown.sql  character_stats.sql  character_talent.sql  character_ticket.sql  character_tutorial.sql  characters.list  characters.sql  corpse.sql  (+31 more)
patched-db/mangos/: achievement_criteria_requirement.sql  achievement_reward.sql  areatrigger_involvedrelation.sql  areatrigger_tavern.sql  areatrigger_teleport.sql  battleground_events.sql  battleground_template.sql  battlemaster_entry.sql  command.sql  command_external.sql  conditions.sql  creature.sql  creature_addon.sql  creature_ai_scripts.sql  creature_ai_summons.sql  creature_ai_texts.sql  creature_battleground.sql  creature_equip_template.sql  creature_involvedrelation.sql  creature_linking.sql  creature_linking_template.sql  creature_loot_template.sql  creature_model_info.sql  creature_model_race.sql  creature_movement.sql  creature_movement_template.sql  creature_onkill_reputation.sql  creature_questrelation.sql  creature_template.sql  creature_template_addon.sql  creature_template_classlevelstats.sql  creature_template_spells.sql  db_script_string.sql  db_version.sql  dbscripts_on_creature_death.sql  dbscripts_on_creature_movement.sql  dbscripts_on_event.sql  dbscripts_on_go_template_use.sql  dbscripts_on_go_use.sql  dbscripts_on_gossip.sql  (+114 more)
patched-db/realmd/: account.sql  account_banned.sql  ip_banned.sql  realmcharacters.sql  realmd.list  realmd_db_version.sql  realmlist.sql  uptime.sql
patched-db/scriptdev2/: custom_texts.sql  gossip_texts.sql  script_texts.sql  script_waypoint.sql  scriptdev2.list  sd2_db_version.sql
patched-db/util/: dumptable  dumptables  loaddb  mktablelist  reorgtable  reorgtables
patches/: codebase.patch
patches/core/: 001-no-pb-inv-chat.patch  002-go-teleport.patch  002-go-teleport.sql
patches/database/: 004-game-tele.sql
scripts/: fetch-base
(+78 files in other folders)
